--- a/manifest.json
+++ b/manifest.json
@@ -2,24 +2,24 @@
   "name": "Simple Motivational Quotes App",
   "short_name": "LSPU CCS",
   "icons": [{
-    "src": "icon-60.png",
+    "src": "/icon-60.png",
       "sizes": "60x60",
       "type": "image/png",
       "purpose": "any maskable"
       
     }, {
-      "src": "icon-90.png",
+      "src": "/icon-90.png",
       "sizes": "90x90",
       "type": "image/png",
       "purpose": "any maskable"
     }, {
-      "src": " icon-100.png",
+      "src": "/icon-100.png",
       "sizes": "100x100",
       "type": "image/png",
       "purpose": "any maskable"
     }
     , {
-      "src": " icon-512.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
